Bug 28213 - ICE: Hollerith constant
Summary: ICE: Hollerith constant
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.1.1
: P3 normal
Target Milestone: ---
Assignee: kargls
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-01 06:58 UTC by s.nakayama
Modified: 2006-07-13 06:34 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-07-03 03:15:54


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description s.nakayama 2006-07-01 06:58:31 UTC
$cat a.f
      program main
      write(*,*) 3horz
      end
$gcc -std=legacy a.f
a.f: In function 'MAIN__':
a.f:2: internal compiler error: Bad IO basetype (9)
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

I don't know if this is really that valid.
Comment 1 Andrew Pinski 2006-07-02 16:24:07 UTC
Confirmed.
Comment 2 kargls 2006-07-03 03:15:54 UTC
I have a patch for this, but I want to see if I can move
it up into the parsing/matching portion of gfortran.
Comment 3 kargls 2006-07-04 02:40:56 UTC
Patch is here

http://gcc.gnu.org/ml/fortran/2006-07/msg00015.html
Comment 4 fengwang 2006-07-11 04:09:50 UTC
Subject: Bug 28213

Author: fengwang
Date: Tue Jul 11 04:09:40 2006
New Revision: 115326

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=115326
Log:
2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * gfortran.dg/hollerith4.f90: Test hollerith constants used in I/O
        list.

2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * trans-io.c (ransfer_expr): Deal with Hollerith constants used in
        I/O list.


Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/trans-io.c
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gfortran.dg/hollerith4.f90

Comment 5 fengwang 2006-07-11 04:10:40 UTC
Subject: Bug 28213

Author: fengwang
Date: Tue Jul 11 04:10:31 2006
New Revision: 115327

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=115327
Log:
2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * gfortran.dg/hollerith4.f90: Test hollerith constants used in I/O
        list.

2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * trans-io.c (ransfer_expr): Deal with Hollerith constants used in
        I/O list.


Modified:
    branches/gcc-4_1-branch/gcc/fortran/ChangeLog
    branches/gcc-4_1-branch/gcc/fortran/trans-io.c
    branches/gcc-4_1-branch/gcc/testsuite/ChangeLog
    branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/hollerith4.f90

Comment 6 fengwang 2006-07-13 06:34:12 UTC
Fixed on trunk and 4.1