re PR fortran/28213 (ICE: Hollerith constant)

2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * gfortran.dg/hollerith4.f90: Test hollerith constants used in I/O
        list.

2006-07-11  Feng Wang  <fengwang@nudt.edu.cn>

        PR fortran/28213
        * trans-io.c (ransfer_expr): Deal with Hollerith constants used in
        I/O list.

From-SVN: r115326